--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.4",
+    "react-navigation-stack": "^1.7.3",
     "react-navigation-tabs": "^2.5.2",
     "react-persist": "^1.0.2",
     "react-redux": "^7.1.1",
